# celq

./: CONTRIBUTING.md  Cargo.toml  README.md  default.nix  flake.nix  template_install.sh
.github/: celq_version.json
.github/scripts/: publish-npm-binary.sh  stable_or_not.cel
.github/workflows/: main.yml  release_choco.yml  release_crates_io.yml  release_github.yml  release_npm.yml  release_pypi.yml
brew/: celq.rb
choco/: celq.nuspec
docs/: installation_guide.md  manual.md
nix/: celq.nix
npm/: package.json.cel  package.json.tmpl
npm/celq/: package.json  package.json.cel
pypi/: pyproject.toml
scoop/: celq.json.cel
src/: args2cel.rs  cli.rs  documentation.rs  input_handler.rs  input_handler_test.rs  json2cel.rs  json2cel_test.rs  lib.rs  main.rs
src/args2cel/: args2cel_test.rs
src/cli/: mod.rs
src/input_handler/: input_handler_test.rs  mod.rs
src/json2cel/: json2cel_test.rs  mod.rs
tests/: golden.rs
